Add remove members endpoint
