# app/Http/Controllers/Api/MembersApiController.php
@@ -3,8 +3,10 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Resource\MemberResource;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use Illuminate\Http\Response;
 use OpenApi\Attributes as OA;
 use Spatie\QueryBuilder\QueryBuilder;
 
@@ -13,6 +15,7 @@ class MembersApiController
     #[OA\Get(
         path: '/api/v1/members',
         description: 'Get all members of the project.',
+        security: [['BearerAuth' => ['members.list']]],
     )]
     #[OA\Parameter(
         name: 'filter',
@@ -41,10 +44,8 @@ class MembersApiController
             ],
         )
     )]
-    #[OA\Response(
-        response: '403',
-        description: 'Not authorized',
-    )]
+    #[OA\Response(ref: '#/components/responses/401', response: '401')]
+    #[OA\Response(ref: '#/components/responses/403', response: '403')]
     public function index(Request $request): JsonResource
     {
         $members = QueryBuilder::for($request->project()->members())
@@ -52,5 +53,44 @@ class MembersApiController
             ->paginate(min($request->integer('per_page', 15), 100));
 
         return MemberResource::collection($members);
+    }
+
+    #[OA\Delete(
+        path: '/api/v1/members/{uuid}',
+        description: 'Remove member from project.',
+        security: [['BearerAuth' => ['members.remove']]],
+    )]
+    #[OA\Parameter(
+        name: 'uuid',
+        description: 'The member resource identifier.',
+        in: 'path',
+        required: true,
+        schema: new OA\Schema(type: 'string', example: '123e4567-e89b-12d3-a456-426614174000'),
+    )]
+    #[OA\Response(
+        response: '200',
+        description: 'No content',
+    )]
+    #[OA\Response(
+        response: '422',
+        description: 'Failed validation',
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property('message', type: 'string', example: 'Cannot remove owner from the project'),
+            ],
+        )
+    )]
+    #[OA\Response(ref: '#/components/responses/401', response: '401')]
+    #[OA\Response(ref: '#/components/responses/403', response: '403')]
+    public function delete(Request $request, string $uuid): Response|JsonResponse
+    {
+        $member = $request->project()->members()->where('uuid', $uuid)->firstOrFail();
+        if ($member->pivot->role->name === 'owner') {
+            // @TODO: Implement a more sophisticated policy which member can be removed maybe ?
+            return response()->json(['message' => 'Cannot remove owner from the project'], 422);
+        }
+        $request->project()->members()->detach($member);
+
+        return response()->noContent(200);
     }
 }
