# openapi.yml
@@ -68,8 +68,46 @@ paths:
                   data: { type: array, items: { $ref: '#/components/schemas/Member' } }
                   meta: { $ref: '#/components/schemas/Pagination' }
                 type: object
+        '401':
+          $ref: '#/components/responses/401'
         '403':
-          description: 'Not authorized'
+          $ref: '#/components/responses/403'
+      security:
+        -
+          BearerAuth:
+            - members.list
+  '/api/v1/members/{uuid}':
+    delete:
+      description: 'Remove member from project.'
+      operationId: 'DELETE::api.v1.members.{uuid}'
+      parameters:
+        -
+          name: uuid
+          in: path
+          description: 'The member resource identifier.'
+          required: true
+          schema:
+            type: string
+            example: 123e4567-e89b-12d3-a456-426614174000
+      responses:
+        '200':
+          description: 'No content'
+        '422':
+          description: 'Failed validation'
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Cannot remove owner from the project' }
+                type: object
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+      security:
+        -
+          BearerAuth:
+            - members.remove
 components:
   schemas:
     Pagination:
@@ -178,6 +216,11 @@ components:
           format: date-time
       type: object
       additionalProperties: false
+  responses:
+    '401':
+      description: Unauthorized
+    '403':
+      description: Unauthorized
   parameters:
     Page:
       name: page
