# routes/api.php
@@ -7,3 +7,4 @@ use Illuminate\Support\Facades\Route;
 
 Route::get('/v1/info', InfoApiController::class)->middleware(['auth:sanctum', 'ability:'.ApiAbility::INFO->value]);
 Route::get('/v1/members', [MembersApiController::class, 'index'])->middleware(['auth:sanctum', 'ability:'.ApiAbility::MEMBERS_LIST->value]);
+Route::delete('/v1/members/{uuid}', [MembersApiController::class, 'delete'])->middleware(['auth:sanctum', 'ability:'.ApiAbility::MEMBERS_REMOVE->value]);
